[Blog] Changed font to Lato, fixed marquee postioning added paragraphs for greater readability

--- a/jantar-theme/_sass/base.scss
+++ b/jantar-theme/_sass/base.scss
@@ -2,7 +2,7 @@ body {
     margin: 0px auto;
     text-align: center;
     background-color: $theme;
-    font-family: 'Roboto Mono', monospace;
+    font-family: 'Lato';
     color: $font;
 }
 
