--- a/jantar-theme/_sass/blog.scss
+++ b/jantar-theme/_sass/blog.scss
@@ -2,7 +2,7 @@
     list-style-type: none;
     text-decoration: none;
     text-align: justify;
-    padding: 0px 10px;
+    padding: 0px calc((100% - 768px)/2);
 
     a.link {
         color: $high_font;
