--- a/jantar-theme/_sass/header.scss
+++ b/jantar-theme/_sass/header.scss
@@ -11,6 +11,13 @@
     {
         height: 30px;
         margin: auto 0px;
+        display: inline-block;
+        & marquee div {
+           display: flex;
+           a {
+               padding-left: 5px; 
+           }
+        }
     }
 }
 
